prevent the small shift when lettering snippet turns off h/t @cbleslie

--- a/src/editor/components/codemirror/theme.css
+++ b/src/editor/components/codemirror/theme.css
@@ -39,7 +39,7 @@
 .lettering-snippet .cm-lettering-subject,
 .lettering-snippet .cm-lettering-modifier,
 .lettering-snippet .cm-lettering-content {
-  border: 1px solid var(--color-utility-dove);
+  outline: 1px solid var(--color-utility-dove);
 }
 
 .cm-s-comic-writer-light .cm-lettering-bold {
